Fixed styling for cropping banner.

--- a/emuu-client/src/components/UserProfile/Profile.scss
+++ b/emuu-client/src/components/UserProfile/Profile.scss
@@ -18,9 +18,55 @@ $secondary-color: #26343d;
     .top-portion {
       width: 100%;
       position: relative;
+      .reactEasyCrop_CropArea {
+          width: 100vw !important;
+          height: 33vh !important;
+          position: absolute;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -75.4%);
+          border: 1px solid rgba(255, 255, 255, 0.5);
+          box-sizing: border-box;
+          box-shadow: 0 0 0 9999em;
+          color: rgba(0, 0, 0, 0.5);
+          overflow: hidden;
+      }
+      .reactEasyCrop_Contain {
+            width: 100vw !important;
+          height: 100% !important;
+           transform: translate(-50%, -75.4%);
+          margin: auto;
+          position: absolute;
+          top: 0;
+          bottom: 0;
+          left: 0;
+          right: 0;
+      }
+      .submit_Container{
+          background: black;
+    padding-inline: 50px;
+
+      }
+      .reactEasyCrop_Container {
+      background: black;
+          height: 50vh;
+          width: 100vw;
+          position: relative;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          overflow: hidden;
+          user-select: none;
+          touch-action: none;
+          cursor: move;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+      }
       .user-profile-bg-image {
-        width: 100%;
-        background: $main-color;
+        width: 100vw;
+        background: #000000 !important;
         overflow: hidden;
         border-radius: 0px 0px 0 0;
         position: relative;
